Se agrega cadena de conexion

--- a/RESTAPI_Alimentos/appsettings.json
+++ b/RESTAPI_Alimentos/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConexionDefault": "server=DESKTOP-F5FO1IU\\SQLEXPRESS; DataBase=API_Alimentos; User=cornejo; Password=0416"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
