Correcion sintaxis en cadena de conexion

--- a/RESTAPI_Alimentos/appsettings.json
+++ b/RESTAPI_Alimentos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConexionDefault": "server=DESKTOP-F5FO1IU\\SQLEXPRESS; DataBase=API_Alimentos; User=cornejo; Password=0416"
+    "ConexionDefault": "Server=DESKTOP-F5FO1IU\\SQLEXPRESS; DataBase=API_Alimentos; User=cornejo; Password=0416;"
   },
 
   "Logging": {
